fixed alignment on fieldy image

--- a/sass/marketing.scss
+++ b/sass/marketing.scss
@@ -314,7 +314,8 @@
 
 	img {
 		display: block;
-		margin: 0 auto;
+		margin: 0px auto;
+		clear: both;
 	}
 	
 	h2 {
